<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".features.receptionist.presentation.view.ReceptionstCallDetailsFragment" >

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_details"
        style="@style/fragment_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3h" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="@id/fragmentAddress"
        app:layout_constraintBottom_toBottomOf="@id/fragmentAddress"
        app:layout_constraintStart_toStartOf="@id/guideline3v" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/patientNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/patient_name"
        style="@style/details.title"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/fragmentAddress" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/patientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/details.body"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toTopOf="@id/patientNameText"
        app:layout_constraintBottom_toBottomOf="@id/patientNameText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/ageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/age2"
        style="@style/details.title"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/patientNameText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_age"
        style="@style/details.body"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toTopOf="@id/ageText"
        app:layout_constraintBottom_toBottomOf="@id/ageText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phoneNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/phone_number"
        style="@style/details.title"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/age" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_phone_number"
        style="@style/details.body"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toTopOf="@id/phoneNumberText"
        app:layout_constraintBottom_toBottomOf="@id/phoneNumberText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/date"
        style="@style/details.title"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        style="@style/details.body"
        android:textDirection="rtl"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toTopOf="@id/dateText"
        app:layout_constraintBottom_toBottomOf="@id/dateText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/status"
        style="@style/details.title"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/statusIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/process_icon"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toTopOf="@id/statusText"
        app:layout_constraintBottom_toBottomOf="@id/statusText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/process"
        style="@style/details.body"
        app:layout_constraintTop_toTopOf="@id/statusText"
        app:layout_constraintEnd_toStartOf="@id/statusIcon"
        app:layout_constraintBottom_toBottomOf="@id/statusText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/caseDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:text="@string/case_description"
        style="@style/details.title"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/status" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/caseDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/default_case_description"
        style="@style/details.body"
        android:textDirection="ltr"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/caseDescriptionText"
        app:layout_constraintStart_toStartOf="@id/caseDescriptionText"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        app:cornerRadius="@dimen/_3sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline90h" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hasBeenLogoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_11sdp"
        android:text="@string/case_has_been_logged_out"
        android:textColor="@color/grey"
        android:backgroundTint="@color/grey_button"
        app:cornerRadius="@dimen/_3sdp"
        android:enabled="false"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline90h" />

</androidx.constraintlayout.widget.ConstraintLayout>