<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".features.receptionist.presentation.view.ReceptionstCreateCallFragment">

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />


    <!-- Elements -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fragment_address"
        android:text="@string/create_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3h" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="@id/fragmentAddress"
        app:layout_constraintBottom_toBottomOf="@id/fragmentAddress"
        app:layout_constraintStart_toStartOf="@id/guideline3v" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/patient_name"
        style="@style/regular"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/fragmentAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/age"
        style="@style/regular"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/phone_number"
        style="@style/regular"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/ageEditText"
        android:importantForAutofill="no"
        android:inputType="phone" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selectDoctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/select_doctor"
        style="@style/regular"
        android:drawableEnd="@drawable/right_arrow"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

    <EditText
        android:id="@+id/caseDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/case_description"
        style="@style/regular"
        android:lines="7"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/selectDoctor"
        app:layout_constraintHeight_percent="0.20"
        android:importantForAutofill="no"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendCallButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/send_call"
        style="@style/regular.button"
        android:backgroundTint="@color/primary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline90h" />

</androidx.constraintlayout.widget.ConstraintLayout>