<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".features.manager.presentation.view.ManagerCreateTaskFragment">

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <!-- Elements -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fragment_address"
        android:text="@string/task_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3h" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="@id/fragmentAddress"
        app:layout_constraintBottom_toBottomOf="@id/fragmentAddress"
        app:layout_constraintStart_toStartOf="@id/guideline3v" />

    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/task_name"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/fragmentAddress"
        android:importantForAutofill="no" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selectEmployee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/select_employee"
        android:textSize="@dimen/_12ssp"
        android:drawableEnd="@drawable/right_arrow"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/taskNameEditText" />

    <EditText
        android:id="@+id/taskDescriptionEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/description"
        android:textSize="@dimen/_12ssp"
        android:lines="7"
        android:background="@drawable/custom_search_bar"
        android:padding="@dimen/_10sdp"
        android:gravity="top"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/selectEmployee"
        app:layout_constraintHeight_percent="0.20"
        android:importantForAutofill="no"
        android:inputType="text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/toDoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/to_do"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintTop_toBottomOf="@id/taskDescriptionEditText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:drawableStart="@drawable/add_task_icon"
        android:drawablePadding="@dimen/_4sdp"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toTopOf="@id/toDoText"
        app:layout_constraintBottom_toBottomOf="@id/toDoText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/toDoRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:orientation="vertical"
        tools:listitem="@layout/item_to_do_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@id/guideline3v"
        app:layout_constraintEnd_toEndOf="@id/guideline97v"
        app:layout_constraintTop_toBottomOf="@id/toDoText"
        app:layout_constraintBottom_toBottomOf="@id/guideline90h" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/send"
        style="@style/regular.button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline90h" />

</androidx.constraintlayout.widget.ConstraintLayout>